--- a/src/components/QuoteSearch.css
+++ b/src/components/QuoteSearch.css
@@ -1,11 +1,4 @@
 
-.quote-search-section {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-  }
-  
-
   .quote-search-input {
     flex: 1;
     margin-right: 10px;
@@ -16,8 +9,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: row; 
-    /* z-index: 1; */
-    /* position: relative; */
+    z-index: 1; 
+   position: relative; 
   top: 0;
   }
   
@@ -53,8 +46,8 @@
   margin-top: 50px;
   }
   
-  .quote-search-section button:hover {
+  /* .quote-search-section button:hover {
     background-color: #b3a0dc;
     transform: scale(1.1);
-  }
+  } */
   
