Quote searching is improved.

--- a/src/components/Pages/Footer.css
+++ b/src/components/Pages/Footer.css
@@ -4,7 +4,7 @@
     color: #5e5c5a;
     text-align: center;
     padding: 30px 0;
- position: fixed; 
+ /* position: fixed;  */
     width: 100%;
     bottom: 0;
     left: 0; 
