--- a/src/App.css
+++ b/src/App.css
@@ -9,15 +9,18 @@
 .App{
 display: flex;
 flex-direction: column;
+height: 100%;
+} 
 
-
-
-
+#root {
+  height: 100%;
 }
  body {
   font-family: "Archivo", sans-serif;
   font-size: 18px;
   font-weight: 400;
+    min-height: 100vh;
+    margin: 0;
 }
 
 
